# aws-python-service-platform

./: .env  .env.docker.example  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  tests.yml
app/: main.py
app/api/: deps.py  routes.py
app/audit/: pdp_audit_repository.py  pdp_audit_service.py
app/auth/: agent_credentials_repository.py  credential_hashing.py
app/core/: config.py  logging.py  policy_loader.py
docs/: TRACKER.md  aws_cli_reference.md  aws_deployment_target.md  aws_operator_runbook.md  aws_terraform_deployment_sequence.md  decision_contract.md  decision_input.md  manual_mcp_smoke_test.md  policy_languiage.md  production_secret_and_state_security.md
migrations/: 001_create_documents_table.sql  002_seed_documents.sql  003_create_pdp_audit_table.sql  004_add_policy_sha256_to_pdp_audit.sql  004_create_registered_agent_credentials.sql  005_change_pdp_audit_resource_to_text_array.sql  006_revert_pdp_audit_resource_to_text.sql
scripts/: create-local-agent-credential.py  register-aws-dev-agent-task.ps1  register_aws_dev_agent.py  run-aws-migrations-task.ps1  run-integration-tests.ps1  run-migrations.ps1  run-test-db-migrations.ps1  run-test-db-setup.ps1  run_aws_migrations.py  smoke-aws-docs-tool.ps1
tests/: conftest.py  factories.py  test_agent_policy_service.py  test_api_routes.py  test_evaluate_agent_action_service_returns_allow_for_matching_constraint.py  test_health_checks.py  test_identity.py  test_mcp_requests.py  test_pdp_audit_repository.py  test_tool_registry.py
(+40 files in other folders)
