[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aws-python-service-platform"
version = "0.1.0"
description = "Production-style Python backend service portfolio project focused on backend and platform engineering depth."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["fastapi", "fastmcp", "uvicorn[standard]", "PyYAML", "pydantic"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "httpx"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
